--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "^8.5.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.84.0",
     "dotenv": "^17.2.3",
@@ -21,6 +21,7 @@
     "expo-document-picker": "^14.0.7",
     "expo-font": "~14.0.9",
     "expo-haptics": "^15.0.7",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.9",
     "expo-print": "^15.0.7",
     "expo-router": "~6.0.15",
@@ -33,6 +34,7 @@
     "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.4.1",
+    "react-native-gifted-charts": "^1.4.68",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
