--- a/app.json
+++ b/app.json
@@ -34,6 +34,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "6acdfcb3-1ddb-45bb-8090-3dafbe560062"
+      }
     }
   }
 }
