--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.9",
     "lucide-react-native": "^0.554.0",
+    "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
