--- a/app.json
+++ b/app.json
@@ -17,7 +17,8 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.monyvann.nano",
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSFaceIDUsageDescription": "Allow $(PRODUCT_NAME) to use Face ID to securely sign in to your account."
       }
     },
     "android": {
@@ -27,21 +28,33 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.monyvann.nano"
+      "package": "com.monyvann.nano",
+      "permissions": [
+        "android.permission.USE_BIOMETRIC",
+        "android.permission.USE_FINGERPRINT"
+      ]
     },
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      [
+        "expo-local-authentication",
+        {
+          "faceIDPermission": "Allow $(PRODUCT_NAME) to use Face ID."
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true
     },
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "6acdfcb3-1ddb-45bb-8090-3dafbe560062"
+        "projectId": "501a4735-9bbe-47ab-9bea-6f46a2fe44f1"
       }
     }
   }
