--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "temp-expo",
+  "name": "nano-budgeting",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -18,14 +18,17 @@
     "expo": "~54.0.25",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.18",
     "expo-document-picker": "^14.0.7",
     "expo-file-system": "~19.0.19",
     "expo-font": "~14.0.9",
     "expo-haptics": "^15.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.9",
+    "expo-local-authentication": "^17.0.7",
     "expo-print": "^15.0.7",
     "expo-router": "~6.0.15",
+    "expo-secure-store": "^15.0.7",
     "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
