--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.9",
     "expo-local-authentication": "^17.0.7",
+    "expo-navigation-bar": "^5.0.9",
     "expo-print": "^15.0.7",
     "expo-router": "~6.0.15",
     "expo-secure-store": "^15.0.7",
